[gd_scene load_steps=14 format=2]

[ext_resource path="res://resorces/food/banana.png" type="Texture" id=1]
[ext_resource path="res://resorces/food/tomato.png" type="Texture" id=2]
[ext_resource path="res://resorces/food/potato.png" type="Texture" id=3]
[ext_resource path="res://resorces/food/bread.png" type="Texture" id=4]
[ext_resource path="res://resorces/food/milk.png" type="Texture" id=5]
[ext_resource path="res://resorces/food/carrot.png" type="Texture" id=6]
[ext_resource path="res://resorces/ModernDOS4379x16.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://end.gd" type="Script" id=8]
[ext_resource path="res://resorces/player.png" type="Texture" id=9]
[ext_resource path="res://resorces/floor.png" type="Texture" id=10]

[sub_resource type="TileSet" id=3]
0/name = "floor.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "floor.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 12, 16, 0, 0 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=1]
size = 44
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 44
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="end" type="Node2D"]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1317.0
margin_top = -166.0
margin_right = 2186.0
margin_bottom = 1030.0
color = Color( 0.729412, 0.54902, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65551, 0, 0, 131072, 0, 0, 131087, 0, 0, 196608, 0, 0, 196623, 0, 0, 262144, 0, 0, 262159, 0, 0, 327680, 0, 0, 327695, 0, 0, 393216, 0, 0, 393231, 0, 0, 458752, 0, 0, 458767, 0, 0, 524288, 0, 0, 524303, 0, 0, 589824, 0, 0, 589839, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0 )

[node name="player" type="Sprite" parent="."]
position = Vector2( 127.351, 428.222 )
rotation = 1.5708
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 479.194, 636.144 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
offset = Vector2( -110.291, -70.1816 )

[node name="x" type="Label" parent="."]
margin_left = 97.8156
margin_top = 465.566
margin_right = 197.816
margin_bottom = 509.566
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num" type="Label" parent="."]
margin_left = 97.8156
margin_top = 525.026
margin_right = 197.816
margin_bottom = 569.026
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player2" type="Sprite" parent="."]
position = Vector2( 226.055, 273.625 )
rotation = 1.5708
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 537.782, 466.411 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
offset = Vector2( -97.9581, -65.1362 )

[node name="x2" type="Label" parent="."]
margin_left = 200.13
margin_top = 310.969
margin_right = 300.13
margin_bottom = 354.969
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num2" type="Label" parent="."]
margin_left = 200.13
margin_top = 370.429
margin_right = 300.13
margin_bottom = 414.429
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player3" type="Sprite" parent="."]
position = Vector2( 359.246, 94.0547 )
rotation = 1.5708
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 670.201, 280.895 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -97.9581, -65.1362 )

[node name="x3" type="Label" parent="."]
margin_left = 332.55
margin_top = 125.453
margin_right = 432.55
margin_bottom = 169.453
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num3" type="Label" parent="."]
margin_left = 332.55
margin_top = 184.913
margin_right = 432.55
margin_bottom = 228.913
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player4" type="Sprite" parent="."]
position = Vector2( 625.628, 94.0547 )
rotation = 1.5708
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 931.785, 280.895 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( -97.9581, -65.1362 )

[node name="x4" type="Label" parent="."]
margin_left = 587.406
margin_top = 125.453
margin_right = 687.406
margin_bottom = 169.453
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num4" type="Label" parent="."]
margin_left = 587.406
margin_top = 184.913
margin_right = 687.406
margin_bottom = 228.913
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player5" type="Sprite" parent="."]
position = Vector2( 754.063, 281.949 )
rotation = 1.5708
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 1065.51, 468.79 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
offset = Vector2( -97.9581, -65.1362 )

[node name="x5" type="Label" parent="."]
margin_left = 722.816
margin_top = 313.348
margin_right = 822.816
margin_bottom = 357.348
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num5" type="Label" parent="."]
margin_left = 722.816
margin_top = 372.808
margin_right = 822.816
margin_bottom = 416.808
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player6" type="Sprite" parent="."]
position = Vector2( 868.227, 441.303 )
rotation = 1.5708
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 1172.09, 628.143 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
offset = Vector2( -97.9581, -65.1362 )

[node name="x6" type="Label" parent="."]
margin_left = 837.804
margin_top = 472.701
margin_right = 937.804
margin_bottom = 516.701
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num6" type="Label" parent="."]
margin_left = 837.804
margin_top = 532.161
margin_right = 937.804
margin_bottom = 576.161
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num7" type="Label" parent="."]
margin_left = 339.909
margin_top = 481.161
margin_right = 714.909
margin_bottom = 525.161
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "You Played For:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num8" type="Label" parent="."]
margin_left = 339.909
margin_top = 538.559
margin_right = 714.909
margin_bottom = 582.559
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "0:23"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = 930.112
margin_top = 942.154
margin_right = 1007.11
margin_bottom = 1019.15
color = Color( 0.388235, 0.388235, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_text" type="Label" parent="ColorRect6"]
margin_left = 18.0312
margin_top = 19.4454
margin_right = 118.031
margin_bottom = 63.4454
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "W"
__meta__ = {
"_edit_use_anchors_": false
}
